--- a/project.css
+++ b/project.css
@@ -270,82 +270,31 @@ margin-left: 500%;
  .k img {
     width: 20px;
 }
-@media (max-width: 537px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .navbar-links {
-        display: none;
-        width: 100%;
-    }
-
-    .navbar-links ul {
-        width: 100%;
-        flex-direction: column;
-        padding: 10px 0;
-    }
-
-    .navbar-links ul li {
-        text-align: center;
-        margin: 10px 0;
-    }
-    toggle-button {
-        display: flex;
-    }
-
-    .navbar.active .navbar-links {
-        display: flex;
+@media (max-width: 500px) {
+    .c1a{
+        flex-direction:column;
     }
 }
-@media(max-width:540){
-    .c1a{
-     flex-direction: row;
+@media (max-width:500px) {
+    .d{
+        flex-direction:column;
     }
-   
+}
+@media (max-width:500px) {
+    .e1a{
+        flex-direction:column;
+    }
+}
+@media (max-width:500px) {
+    .e2a{
+        flex-direction:column;
+    }
+}
+@media (max-width:500px) {
+    .f1a{
+        flex-direcation:column;
+    }
+}
+
         
-    }
-    @media (max-width: 480px) {
-        .b {
-            padding: 15px;
-            margin: 0;
-            height: auto;
-            background-position: center;
-            background-size: cover;
-        }
-    
-        .e1b {
-            padding: 20px;
-            text-align: center;
-        }
-    
-        .e1b h1 {
-            font-size: 1.5rem;
-        }
-    
-        .e1b p {
-            font-size: 0.9rem;
-            line-height: 1.3;
-        }
-    
-        .btn {
-            font-size: 0.9rem;
-            padding: 10px 15px;
-        }
-    }
-    @media (max-width: 480px) {
-        .c {
-            padding: 20px;
-            font-size: 0.7rem;
-        }
-    
-        .c1a div {
-            padding: 20px;
-        }
-    
-        .c1a img {
-            width: 25px;
-        }
-    }
     
